# inventory-dss-ftgm-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  main.py
app/application/: forecast_service.py
app/baselines/: __init__.py  seasonal_naive.py
app/ftgm/: __init__.py  exceptions.py  fourier.py  metrics.py  model.py  order_selection.py  preprocessing.py
app/presentation/: router.py  schemas.py
docs/: README.md
docs/ftgmmodel/utils/: ftgm_1.m  ftgm_2.m  ftgm_3.m  ftgm_4.m  ftgm_5.m
tests/: test_metrics.py  test_model.py  test_paper_data.py  test_preprocessing.py  test_service.py  test_service_output.py
