[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-dss-ftgm-engine"
version = "0.1.0"
description = "FTGM forecasting engine for the Inventory Optimization DSS Platform."
requires-python = ">=3.11"
dependencies = [
"fastapi",
"uvicorn[standard]",
"pydantic",
"pydantic-settings",
"numpy",
"pandas",
"scipy",
"scikit-learn",
"statsmodels"
]

[project.optional-dependencies]
dev = [
"pytest",
"pytest-asyncio",
"ruff",
"mypy",
"jupyter"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
